--- a/Practica1/practica1alu.qsf
+++ b/Practica1/practica1alu.qsf
@@ -60,10 +60,7 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE divisorFrecuencia.vhd
 set_global_assignment -name VHDL_FILE barrelShifters.vhd
 set_global_assignment -name BDF_FILE practica1alu.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VHDL_FILE UAritmetica.vhd
-set_global_assignment -name VHDL_FILE Multiplicador.vhd
-set_global_assignment -name VHDL_FILE Full_adder_Flag.vhd
-set_global_assignment -name VHDL_FILE Full_adder.vhd
