--- a/Practica1/practica1alu.qsf
+++ b/Practica1/practica1alu.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE EP4CE6E22C8
 set_global_assignment -name TOP_LEVEL_ENTITY practica1alu
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:19:25  OCTOBER 17, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "21.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -62,8 +62,9 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE barrelShifters.vhd
 set_global_assignment -name BDF_FILE practica1alu.bdf
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE UAritmetica.vhd
 set_global_assignment -name VHDL_FILE Multiplicador.vhd
 set_global_assignment -name VHDL_FILE Full_adder_Flag.vhd
 set_global_assignment -name VHDL_FILE Full_adder.vhd
+set_global_assignment -name VHDL_FILE Full_adder_Five.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
