--- a/Practica1/practica1alu.qsf
+++ b/Practica1/practica1alu.qsf
@@ -65,7 +65,7 @@ set_global_assignment -name VHDL_FILE barrelShifters.vhd
 set_global_assignment -name BDF_FILE practica1alu.bdf
 set_global_assignment -name VHDL_FILE UAritmetica.vhd
 set_global_assignment -name VHDL_FILE Multiplicador.vhd
-set_global_assignment -name VHDL_FILE Full_adder_Flag.vhd
 set_global_assignment -name VHDL_FILE Full_adder.vhd
 set_global_assignment -name VHDL_FILE Full_adder_Five.vhd
+set_global_assignment -name VHDL_FILE Full_adder_wF.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
