--- a/p3/practica3.qsf
+++ b/p3/practica3.qsf
@@ -83,4 +83,5 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_global_assignment -name VHDL_FILE comparador8.vhd
+set_global_assignment -name VHDL_FILE comparador16.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
