--- a/p4/pilaFinal.qsf
+++ b/p4/pilaFinal.qsf
@@ -84,9 +84,6 @@ set_location_assignment PIN_111 -to filas[2]
 set_location_assignment PIN_112 -to filas[3]
 set_location_assignment PIN_113 -to filas[4]
 set_location_assignment PIN_73 -to rst
-set_location_assignment PIN_105 -to carry_flag
-set_location_assignment PIN_104 -to overflow_flag
-set_location_assignment PIN_103 -to sign_flag
 set_location_assignment PIN_76 -to enable
 set_global_assignment -name VHDL_FILE texto.vhd
 set_global_assignment -name VHDL_FILE letras.vhd
@@ -117,4 +114,6 @@ set_global_assignment -name VHDL_FILE barrelShifters.vhd
 set_global_assignment -name VHDL_FILE ALU.vhd
 set_global_assignment -name BDF_FILE pilaFinal.bdf
 set_location_assignment PIN_50 -to punto
+set_location_assignment PIN_121 -to write
+set_location_assignment PIN_105 -to zero_flag
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
